--- a/my-architecture-portfolio/package.json
+++ b/my-architecture-portfolio/package.json
@@ -1,13 +1,15 @@
 {
   "name": "my-architecture-portfolio",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "homepage": "https://jamal019.github.io/my-architecture-portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
@@ -22,7 +24,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-    
   },
   "eslintConfig": {
     "extends": [
