--- a/my-architecture-portfolio/package.json
+++ b/my-architecture-portfolio/package.json
@@ -1,12 +1,12 @@
 {
   "name": "my-architecture-portfolio",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
-  "homepage": "https://jamal019.github.io/my-architecture-portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -14,8 +14,8 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4",
-    "homepage": "https://jamal019.github.io/my-architecture-portfolio"
+    "homepage": "https://jamal019.github.io/my-architecture-portfolio",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
